--- a/myblog/blog/templates/article_details.html
+++ b/myblog/blog/templates/article_details.html
@@ -45,11 +45,53 @@
 </div>
 <br/>
 
-<div class="article-title">
-    <h1>{{ post.title }}</h1>
+<div style="display: flex; text-align: center">
+    <div class="article-title" style="flex: 1">
+        <h1>{{ post.title }}</h1>
+    </div>
+
+    {% if user.is_authenticated and user.id == post.author.id %}
+    <div class="dropdown" style="position: relative; left: -380px; bottom: -7px; transform: scale(1.1)">
+        <button class="btn btn-link dropdown-togggle" type="button"
+                style="color: black; text-decoration: none" id="dropdownMenuButton"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fas fa-bars"></i>
+        </button>
+        <div class="dropdown-menu" style="margin-left: -100px; width: 30px;"
+             aria-labelledby="dropdownMenuButton">
+            <div class="dropdown-item">
+                <i class="fa-regular fa-pen-to-square"></i> <a
+                    href="{% url 'update_post' post.pk %}"
+                    style="text-decoration: none; padding: 5px; color: black; font-family: Poppins, sans-serif">Edit</a>
+            </div>
+            <div class="dropdown-item">
+                <i class="fa-solid fa-trash-can" style="color: red"></i> <a
+                    href="{% url 'delete_post' post.pk %}"
+                    style="color: red; text-decoration: none; padding: 5px; font-family: Poppins, sans-serif">Delete</a>
+            </div>
+        </div>
+    </div>
+    {% endif %}
 </div>
 
-<div class="article-category" style="text-align: center; position: relative; left: -23px; font-family: Poppins, sans-serif">
+<style>
+    .dropdown-togggle::after {
+        display: none;
+    }
+
+    .dropdown-togggle:hover {
+        transform: scale(1.3);
+        transition: all ease 0.3s;
+    }
+
+    .dropdown-togggle {
+        transition: all ease 0.3s;
+    }
+
+</style>
+
+<div class="article-category"
+     style="text-align: center; position: relative; left: -23px; font-family: Poppins, sans-serif">
     <a href="{% url 'category' post.category|slugify %}" style="text-decoration: none">
         <span style="color: rgb(136, 136, 136)">{{ post.category }}</span>
     </a>
@@ -63,7 +105,8 @@
           style="position: relative; bottom: 13px; font-weight: normal">Place: {{ forloop.counter }}</span>
     {% if forloop.first %}
     <i class="fa-solid fa-trophy"
-       style="margin-left: 15px; position: relative; bottom: 15px; transform: scale(1.2); color: goldenrod;" title="winner by reactions"></i>
+       style="margin-left: 15px; position: relative; bottom: 15px; transform: scale(1.2); color: goldenrod;"
+       title="winner by reactions"></i>
     {% endif %}
     {% if forloop.counter == 2 %}
     <i class="fa-solid fa-trophy"
